--- a/FinalProject/Views/Film/Index.cshtml
+++ b/FinalProject/Views/Film/Index.cshtml
@@ -1,5 +1,17 @@
 ﻿@model IEnumerable<Film>
 
+<style>
+
+    body, h3, table th, table td, a {
+        color: #dc143c;
+    }
+
+
+        a:hover {
+            color: #FFFFFF;
+            text-decoration: underline;
+        }
+</style>
 <h2>Films</h2>
 
 <div style="display: block">
