--- a/FinalProject/Views/Film/InsertFilm.cshtml
+++ b/FinalProject/Views/Film/InsertFilm.cshtml
@@ -1,4 +1,16 @@
 ﻿@model Film
+<style>
+
+    body, h3, table th, table td, a {
+        color: #dc143c;
+    }
+
+
+        a:hover {
+            color: #FFFFFF;
+            text-decoration: underline;
+        }
+</style>
 
 <h2>Create a New Film</h2>
 
@@ -35,6 +47,19 @@
         <label><input type="radio" asp-for="Checked" value="true" /> True</label>
         <label><input type="radio" asp-for="Checked" value="false" /> False</label>
     </div>
+
+    <div>
+        <img src="@Model.Image" width="200" />
+    </div>
+    <div>
+        <form method="post" enctype="multipart/form-data" asp-controller="Film" asp-action="UploadButtonClick">
+            <input asp-for="ID" type="hidden" />
+            <input asp-for="Image" class="form-control" name="files" type="file" />
+            <p>Upload Photo</p>
+            <input class="btn btn-success" type="submit" value="Upload" />
+        </form>
+    </div>
+
     
     
 
