--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hello friends. Welcome to THE LIST.</h1>
+    <h1 class="display-4">
+        Park your cars!!!
+        <br><br />
+        <img src="~/images/LAUREN GIF.gif" alt="GIF Description" width="200">
+        <br><br />
+        You have arrived at THE LIST
+        
+    </h1>
     <p>Feel free to click on films and see what me and the mrs are watching.</p>
 </div>
