--- a/FinalProject/Views/Film/UpdateFilm.cshtml
+++ b/FinalProject/Views/Film/UpdateFilm.cshtml
@@ -1,18 +1,19 @@
 ﻿@model Film
+<style>
+
+    body, h3, table th, table td, a {
+        color: #dc143c;
+    }
+
+
+        a:hover {
+            color: #FFFFFF;
+            text-decoration: underline;
+        }
+</style>
 
 <h2>Update @Model.Title</h2>
 
-<div>
-    <img src="@Model.Image" width="200" />
-</div>
-<div>
-    <form method="post" enctype="multipart/form-data" asp-controller="Film" asp-action="UploadButtonClick">
-        <input asp-for="ID" type="hidden" />
-        <input asp-for="Image" class="form-control" name="files" type="file" />
-        <p>Upload Photo</p>
-        <input class="btn btn-success" type="submit" value="Upload" />
-    </form>
-</div>
 
 @using (Html.BeginForm("UpdateFilmToDatabase", "Film", "Post"))
 {
@@ -47,6 +48,17 @@
     </div>
 
    
+<div>
+    <img src="@Model.Image" width="200" />
+</div>
+<div>
+    <form method="post" enctype="multipart/form-data" asp-controller="Film" asp-action="UploadButtonClick">
+        <input asp-for="ID" type="hidden" />
+        <input asp-for="Image" class="form-control" name="files" type="file" />
+        <p>Upload Photo</p>
+        <input class="btn btn-success" type="submit" value="Upload" />
+    </form>
+</div>
    
     
     <br> </br>
