--- a/FinalProject/Views/Film/ViewFilm.cshtml
+++ b/FinalProject/Views/Film/ViewFilm.cshtml
@@ -1,9 +1,25 @@
 ﻿@model Film
 
+
+<style>
+    
+    body, h3, table th, table td, a {
+        color: #dc143c;
+        
+    }
+
+        
+        a:hover {
+            color: #FFFFFF; 
+            text-decoration: underline; 
+        }
+</style>
+
 <h3>@Model.Title</h3>
 
 <table class="table">
     <tr>
+        
         <th>ID</th>
         <th>Title</th>
         <th>Director</th>
@@ -24,24 +40,22 @@
         <td>@Model.Runtime</td>
         <td>@Model.Pee_Time</td>
         <td>@Model.Checked</td>
-
     </tr>
 </table>
 
 <div style="display: block">
     <a href="/Film/UpdateFilm/@Model.ID">Update this Film</a>
 </div>
-<br> </br>
-<br> </br>
-<br> </br>
-<br> </br>
-
+<br />
+<br />
+<br />
+<br />
 
 <div style="display: block">
-
     @using (Html.BeginForm("DeleteFilm", "Film", "Post"))
     {
         <input type="hidden" asp-for="ID" value="@Model.ID" />
-        <input type="submit" onclick="return confirm('Are you sure?')" value="Delete this film" />
+        <input type="submit" onclick="return confirm('Are you sure you want to delete this film? This action cannot be undone!')" value="Delete this film" style="color: #FF0000; background-color: #000000; border: 1px solid #dc143c; padding: 5px 10px; font-size: 16px; font-weight: bold;" />
     }
 </div>
+
