--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -1,4 +1,22 @@
 ﻿<!DOCTYPE html>
+<style>
+
+    <style >
+    nav.navbar {
+        background-color: #00008b; 
+        color: #dc143c; 
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    nav.navbar .nav-link {
+        color: #dc143c !important; 
+    }
+
+        nav.navbar .nav-link:hover {
+            color: #FFFFFF !important; 
+            text-decoration: underline; 
+        }
+</style>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,6 +25,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FinalProject.styles.css" asp-append-version="true" />
+
 </head>
 <body id="mainpage">
     <header>
