--- a/FinalProject/wwwroot/css/StyleSheet.css
+++ b/FinalProject/wwwroot/css/StyleSheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+﻿@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 html {
     font-size: 14px;
